@@ -1,3 +1,7 @@
+[B][COLOR gold]v1.9.7[/COLOR][/B]
+- Added more providers language options in settings, to support Openscrapers's newly
+    added language scrapers
+
 [B][COLOR gold]v1.9.5[/COLOR][/B]
 - Fix crash on sources list dialog exit
 - Made add-on's context menu items labels italics, to differ from Kodi's ones
